--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="https://prachpaveeny.github.io/prachpaveen.github.io/">About Me</a></li>
+                    <li><a href="https://prachpaveeny.github.io/prachpaveen.github.io/">Portfolio</a></li>
+                    <li><a href="https://prachpaveeny.github.io/prachpaveen.github.io/">Contact</a></li>
                 </ul>
                 <div class="logo">
                     <h1>Landie</h1>
@@ -129,9 +129,9 @@
             </div>
             <div class="footer-bottom">
                 <ul class="btm-menu">
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="https://prachpaveeny.github.io/prachpaveen.github.io/">About Me</a></li>
+                    <li><a href="https://prachpaveeny.github.io/prachpaveen.github.io/">Portfolio</a></li>
+                    <li><a href="https://prachpaveeny.github.io/prachpaveen.github.io/">Contact</a></li>
                 </ul>
                 <ul class="footer01">
                     Prachpaveen Yiambunya &copy;<script>
